[metadata]
name = warp10client
summary = OVH Python Warp10 Client
description-file =
    README.md
author = OVH
author-email = bu.pci@interne.ovh.net
home-page = https://www.ovh.com/fr/cloud/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    warp10client
